// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-dom parses Action 1`] = `
"import React from 'react';
import css from 'glam';
import ViewsAction from './ViewsAction.view';

const styles = { h197667r: css\`flex-direction: column\` };

const Action = props => (
  <ViewsAction onClick={props.clickMe} className={styles.h197667r}>
    <div>click me</div>
  </ViewsAction>
);
export default Action;
"
`;

exports[`react-dom parses BoxShadow 1`] = `
"import React from 'react';
import css from 'glam';

const styles = { h197667r: css\`flex-direction: column\` };

const BoxShadow = props => (
  <div
    className={styles.h197667r}
    style={{ boxShadow: \`10px 5px 2px \${props.color}\` }}
  />
);
export default BoxShadow;
"
`;

exports[`react-dom parses CaptureEmail 1`] = `
"import React from 'react';
import css from 'glam';

const styles = { h1veh7ze: css\`border: 1px solid black;color: blue\` };

const CaptureEmail = props => (
  <input onSubmit={props.onSubmit} className={styles.h1veh7ze} />
);
export default CaptureEmail;
"
`;

exports[`react-dom parses CaptureFile 1`] = `
"import React from 'react';

const CaptureFile = props => <input />;
export default CaptureFile;
"
`;

exports[`react-dom parses CaptureNumber 1`] = `
"import React from 'react';

const CaptureNumber = props => <input />;
export default CaptureNumber;
"
`;

exports[`react-dom parses CapturePhone 1`] = `
"import React from 'react';

const CapturePhone = props => <input />;
export default CapturePhone;
"
`;

exports[`react-dom parses CaptureSecure 1`] = `
"import React from 'react';

const CaptureSecure = props => <input />;
export default CaptureSecure;
"
`;

exports[`react-dom parses CaptureText 1`] = `
"import React from 'react';

const CaptureText = props => <input />;
export default CaptureText;
"
`;

exports[`react-dom parses GoTo 1`] = `
"import React from 'react';
import css from 'glam';

const styles = { h197667r: css\`flex-direction: column\` };

const GoTo = props => (
  <a goTo=\\"https://viewsdx.com\\" className={styles.h197667r}>
    <div>Go to ViewsDX website!</div>
  </a>
);
export default GoTo;
"
`;

exports[`react-dom parses Horizontal 1`] = `
"import React from 'react';
import css from 'glam';

const styles = { h1ylap54: css\`flex-direction: row;border: 1px solid red\` };

const Horizontal = props => <div className={styles.h1ylap54} />;
export default Horizontal;
"
`;

exports[`react-dom parses Hover 1`] = `
"import React from 'react';
import css from 'glam';
import ViewsAction from './ViewsAction.view';

const styles = {
  hp30p9n: css\`flex-direction: column;background-color: white\`,
  h1e0dqk7: css\`color: black\`,
};

const Hover = props => (
  <ViewsAction onClick={props.onClick} className={styles.hp30p9n}>
    <div className={styles.h1e0dqk7}>Hey!</div>
  </ViewsAction>
);
export default Hover;
"
`;

exports[`react-dom parses HoverProxy 1`] = `
"import React from 'react';
import css from 'glam';
import ViewsAction from './ViewsAction.view';

const styles = {
  hp30p9n: css\`flex-direction: column;background-color: white\`,
  h1e0dqk7: css\`color: black\`,
};

const HoverProxy = props => (
  <ViewsAction onClick={props.onClick} className={styles.hp30p9n}>
    <props.icon from={props.icon} fill=\\"white\\" fillHover=\\"black\\" />
    <div className={styles.h1e0dqk7}>Hey!</div>
  </ViewsAction>
);
export default HoverProxy;
"
`;

exports[`react-dom parses Image 1`] = `
"import React from 'react';

const Image = props => <img source=\\"https://viewsdx.com/rocks.jpg\\" />;
export default Image;
"
`;

exports[`react-dom parses JustText 1`] = `
"import React from 'react';

const JustText = props => <div>hey!</div>;
export default JustText;
"
`;

exports[`react-dom parses ListOfSomething 1`] = `
"import React from 'react';
import css from 'glam';

const styles = { h197667r: css\`flex-direction: column\` };

const ListOfSomething = props => (
  <div className={styles.h197667r}>
    {props.list.map((item, i) => <div key={i}>{item.name}</div>)}
  </div>
);
export default ListOfSomething;
"
`;

exports[`react-dom parses NameIsType 1`] = `
"import React from 'react';

const NameIsType = props => <div>iam</div>;
export default NameIsType;
"
`;

exports[`react-dom parses Proxy 1`] = `
"import React from 'react';

const Proxy = props => (
  <div><props.icon from={props.icon} fill=\\"red\\" /><div>{props.text}</div></div>
);
export default Proxy;
"
`;

exports[`react-dom parses Svg 1`] = `
"import React from 'react';
import Svg, {
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
} from 'react-native-svg';

const Svg = props => (
  <Svg viewBox=\\"0 0 20 20\\">
    <Path d=\\"0 20\\" />
    <Circle cx={10} cy={5} r={5} />
    <G><Path d={1} /><Path d={2} /></G>
    <text text=\\"hey\\" />
  </Svg>
);
export default Svg;
"
`;

exports[`react-dom parses Teleport 1`] = `
"import React from 'react';
import css from 'glam';
import ViewsTeleport from './ViewsTeleport.view';

const styles = { hcstcuq: css\`flex-direction: row\` };

const Teleport = props => (
  <ViewsTeleport teleportTo=\\"..\\" className={styles.hcstcuq}>
    <div>go back</div>
  </ViewsTeleport>
);
export default Teleport;
"
`;

exports[`react-dom parses Text 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  hngg1gi: css\`color: blue;font-family: Montserrat, sans-serif;font-size: 16px;font-weight: 300\`,
};

const Text = props => <div className={styles.hngg1gi}>Hi, I'm some text</div>;
export default Text;
"
`;

exports[`react-dom parses UseOfProxy 1`] = `
"import React from 'react';
import Button from './Button.view';

const UseOfProxy = props => (
  <div><Button color=\\"red\\" icon=\\"MyIcon\\" text=\\"I'm a button!\\" /></div>
);
export default UseOfProxy;
"
`;

exports[`react-dom parses Vertical 1`] = `
"import React from 'react';
import css from 'glam';

const styles = { h1ldc0yo: css\`flex-direction: column;background-color: red\` };

const Vertical = props => <div className={styles.h1ldc0yo} />;
export default Vertical;
"
`;

exports[`react-dom parses When 1`] = `
"import React from 'react';

const When = props => (
  <div>{props.showMe ? <div>I may be hidden</div> : null}</div>
);
export default When;
"
`;

exports[`react-dom parses WhenList 1`] = `
"import React from 'react';
import css from 'glam';

const styles = { h197667r: css\`flex-direction: column\` };

const WhenList = props => (
  <div>
    {props.showMe
      ? <div className={styles.h197667r}>
          {props.list.map((item, i) => <div key={i}>{item.thing}</div>)}
        </div>
      : null}
  </div>
);
export default WhenList;
"
`;

exports[`react-dom parses WhenTopLevel 1`] = `
"import React from 'react';

const WhenTopLevel = props =>
  (props.showMe ? <div>I may be hidden</div> : null);
export default WhenTopLevel;
"
`;

exports[`react-native parses Action 1`] = `
"import React from 'react';
import ViewsAction from './ViewsAction.view';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({ h197667r: { flexDirection: 'column' } });

const Action = props => (
  <ViewsAction onClick={props.clickMe} style={styles.h197667r}>
    <Text>click me</Text>
  </ViewsAction>
);
export default Action;
"
`;

exports[`react-native parses BoxShadow 1`] = `
"import React from 'react';
import { StyleSheet, View } from 'react-native';

const styles = StyleSheet.create({ h197667r: { flexDirection: 'column' } });

const BoxShadow = props => (
  <View
    style={[
      styles.h197667r,
      {
        elevation: 1,
        shadowOffset: { height: 10, width: 5 },
        shadowRadius: 2,
        shadowColor: props.color,
        shadowOpacity: 1,
      },
    ]}
  />
);
export default BoxShadow;
"
`;

exports[`react-native parses CaptureEmail 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, StyleSheet, TextInput } from 'react-native';

const styles = StyleSheet.create({
  h16yoyru: { border: '1px solid black', color: 'red' },
});

const CaptureEmail = props => (
  <KeyboardAvoidingView behavior=\\"position\\">
    <TextInput
      onSubmitEditing={props.onSubmit}
      returnKeyType=\\"go\\"
      onChangeText={Email => this.setState({ Email })}
      ref={$e => (this.$captureEmail = $e)}
      value={state.Email}
      placeholderTextColor=\\"blue\\"
      style={styles.h16yoyru}
    />
  </KeyboardAvoidingView>
);
export default CaptureEmail;
"
`;

exports[`react-native parses CaptureFile 1`] = `
"import React from 'react';
import CaptureFile from './CaptureFile.view';

const CaptureFile = props => <CaptureFile />;
export default CaptureFile;
"
`;

exports[`react-native parses CaptureNumber 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CaptureNumber = props => (
  <KeyboardAvoidingView behavior=\\"position\\"><TextInput /></KeyboardAvoidingView>
);
export default CaptureNumber;
"
`;

exports[`react-native parses CapturePhone 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CapturePhone = props => (
  <KeyboardAvoidingView behavior=\\"position\\"><TextInput /></KeyboardAvoidingView>
);
export default CapturePhone;
"
`;

exports[`react-native parses CaptureSecure 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CaptureSecure = props => (
  <KeyboardAvoidingView behavior=\\"position\\"><TextInput /></KeyboardAvoidingView>
);
export default CaptureSecure;
"
`;

exports[`react-native parses CaptureText 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CaptureText = props => (
  <KeyboardAvoidingView behavior=\\"position\\"><TextInput /></KeyboardAvoidingView>
);
export default CaptureText;
"
`;

exports[`react-native parses GoTo 1`] = `
"import React from 'react';
import Link from './Link.view';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({ h197667r: { flexDirection: 'column' } });

const GoTo = props => (
  <Link goTo=\\"https://viewsdx.com\\" style={styles.h197667r}>
    <Text>Go to ViewsDX website!</Text>
  </Link>
);
export default GoTo;
"
`;

exports[`react-native parses Horizontal 1`] = `
"import React from 'react';
import { StyleSheet, View } from 'react-native';

const styles = StyleSheet.create({
  h1ylap54: { flexDirection: 'row', border: '1px solid red' },
});

const Horizontal = props => <View style={styles.h1ylap54} />;
export default Horizontal;
"
`;

exports[`react-native parses Hover 1`] = `
"import React from 'react';
import ViewsAction from './ViewsAction.view';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({
  hp30p9n: { flexDirection: 'column', backgroundColor: 'white' },
  h1e0dqk7: { color: 'black' },
});

const Hover = props => (
  <ViewsAction onClick={props.onClick} style={styles.hp30p9n}>
    <Text style={styles.h1e0dqk7}>Hey!</Text>
  </ViewsAction>
);
export default Hover;
"
`;

exports[`react-native parses HoverProxy 1`] = `
"import React from 'react';
import ViewsAction from './ViewsAction.view';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({
  hp30p9n: { flexDirection: 'column', backgroundColor: 'white' },
  h1e0dqk7: { color: 'black' },
});

const HoverProxy = props => (
  <ViewsAction onClick={props.onClick} style={styles.hp30p9n}>
    <props.icon from={props.icon} fill=\\"white\\" fillHover=\\"black\\" />
    <Text style={styles.h1e0dqk7}>Hey!</Text>
  </ViewsAction>
);
export default HoverProxy;
"
`;

exports[`react-native parses Image 1`] = `
"import React from 'react';
import { Image } from 'react-native';

const Image = props => <Image source=\\"https://viewsdx.com/rocks.jpg\\" />;
export default Image;
"
`;

exports[`react-native parses JustText 1`] = `
"import React from 'react';
import { Text } from 'react-native';

const JustText = props => <Text>hey!</Text>;
export default JustText;
"
`;

exports[`react-native parses ListOfSomething 1`] = `
"import React from 'react';
import { StyleSheet, Text, View } from 'react-native';

const styles = StyleSheet.create({ h197667r: { flexDirection: 'column' } });

const ListOfSomething = props => (
  <View style={styles.h197667r}>
    {props.list.map((item, i) => <Text key={i}>{item.name}</Text>)}
  </View>
);
export default ListOfSomething;
"
`;

exports[`react-native parses NameIsType 1`] = `
"import React from 'react';
import { Text } from 'react-native';

const NameIsType = props => <Text>iam</Text>;
export default NameIsType;
"
`;

exports[`react-native parses Proxy 1`] = `
"import React from 'react';
import { Text, View } from 'react-native';

const Proxy = props => (
  <View>
    <props.icon from={props.icon} fill=\\"red\\" /><Text>{props.text}</Text>
  </View>
);
export default Proxy;
"
`;

exports[`react-native parses Svg 1`] = `
"import React from 'react';
import Svg, {
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
} from 'react-native-svg';

const Svg = props => (
  <Svg viewBox=\\"0 0 20 20\\">
    <Path d=\\"0 20\\" />
    <Circle cx={10} cy={5} r={5} />
    <G><Path d={1} /><Path d={2} /></G>
    <SvgText text=\\"hey\\" />
  </Svg>
);
export default Svg;
"
`;

exports[`react-native parses Teleport 1`] = `
"import React from 'react';
import ViewsTeleport from './ViewsTeleport.view';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({ hcstcuq: { flexDirection: 'row' } });

const Teleport = props => (
  <ViewsTeleport teleportTo=\\"..\\" style={styles.hcstcuq}>
    <Text>go back</Text>
  </ViewsTeleport>
);
export default Teleport;
"
`;

exports[`react-native parses Text 1`] = `
"import React from 'react';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({
  h1rtwlqa: { color: 'blue', fontFamily: 'Montserrat-300', fontSize: 16 },
});

const Text = props => <Text style={styles.h1rtwlqa}>Hi, I'm some text</Text>;
export default Text;
"
`;

exports[`react-native parses UseOfProxy 1`] = `
"import React from 'react';
import Button from './Button.view';
import { View } from 'react-native';

const UseOfProxy = props => (
  <View><Button color=\\"red\\" icon=\\"MyIcon\\" text=\\"I'm a button!\\" /></View>
);
export default UseOfProxy;
"
`;

exports[`react-native parses Vertical 1`] = `
"import React from 'react';
import { StyleSheet, View } from 'react-native';

const styles = StyleSheet.create({
  h1ldc0yo: { flexDirection: 'column', backgroundColor: 'red' },
});

const Vertical = props => <View style={styles.h1ldc0yo} />;
export default Vertical;
"
`;

exports[`react-native parses When 1`] = `
"import React from 'react';
import { Text, View } from 'react-native';

const When = props => (
  <View>{props.showMe ? <Text>I may be hidden</Text> : null}</View>
);
export default When;
"
`;

exports[`react-native parses WhenList 1`] = `
"import React from 'react';
import { StyleSheet, Text, View } from 'react-native';

const styles = StyleSheet.create({ h197667r: { flexDirection: 'column' } });

const WhenList = props => (
  <View>
    {props.showMe
      ? <View style={styles.h197667r}>
          {props.list.map((item, i) => <Text key={i}>{item.thing}</Text>)}
        </View>
      : null}
  </View>
);
export default WhenList;
"
`;

exports[`react-native parses WhenTopLevel 1`] = `
"import React from 'react';
import { Text } from 'react-native';

const WhenTopLevel = props =>
  (props.showMe ? <Text>I may be hidden</Text> : null);
export default WhenTopLevel;
"
`;
